--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,6 +12,28 @@ Anybody is welcome to join us.
 The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
+
+### November
+
+#### Tuesday November 25
+[Feng et al, 2025](https://doi.org/10.1002/ajb2.16350) 
+The link between ancient whole-genome duplications and cold adaptations in the Caryophyllaceae
+
+
+#### Tuesday November 18
+[Garsmeur et al, 2025](https://www.cell.com/cell/fulltext/S0092-8674(25)01085-2) 
+The genomic footprints of wild Saccharum species trace domestication, diversification, and modern breeding of sugarcane
+
+#### Tuesday November 11
+[Zhang & Qian, 2025](https://doi.org/10.1038/s41576-025-00850-1) 
+Functional synonymous mutations and their evolutionary consequences
+
+
+#### Tuesday November 4
+[Alam et al, 2025](https://www.pnas.org/doi/10.1073/pnas.2514614122) 
+Evolutionary histories of functional mutations during the domestication and spread of japonica rice in Asia
+
+
 ### October
 
 #### Tuesday October 28
