--- a/reading.Rmd
+++ b/reading.Rmd
@@ -14,6 +14,16 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 
 
+### January
+
+#### Tuesday January 20
+[Jørgensen et al, 2025](https://www.science.org/doi/10.1126/science.adx2022) 
+Postdomestication selection of MKK3 shaped seed dormancy and end-use traits in barley
+
+
+## 2025
+
+
 ### December
 
 #### Tuesday December 16
