--- a/people.Rmd
+++ b/people.Rmd
@@ -366,7 +366,7 @@ Charlotte is a BSc student in Biology and helps with plant care and lab duties.
 <br>
 
 <div style="float: left">
-<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+<img src="own_images/people/Pia_Wiesemann.jpeg" style="width: 100px ;border:10px solid white">
 </div>
 
 
