--- a/reading.Rmd
+++ b/reading.Rmd
@@ -15,6 +15,9 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 
 ### January
+#### Tuesday January 27
+[Roulin, 2025](https://www.sciencedirect.com/science/article/pii/S1369526625001608) 
+Blinded by the lights? Re-examining the adaptive role of transposable elements in plants with population genomics
 
 #### Tuesday January 20
 [Jørgensen et al, 2025](https://www.science.org/doi/10.1126/science.adx2022) 
