--- a/reading.Rmd
+++ b/reading.Rmd
@@ -13,6 +13,16 @@ The idea is that everyone reads the paper before and we dive directly in without
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
 
+### February
+
+#### Tuesday Feburary 17
+[Sielmann, 2026](https://link.springer.com/article/10.1007/s00425-026-04938-8#Sec10) 
+Combined R2R3–MYB transcription factor mutants reveal the regulatory structure of the Arabidopsis thaliana flavonoid biosynthesis pathway
+
+#### Tuesday Feburary 10
+[Celebioglu, 2025](https://www.cell.com/molecular-plant/fulltext/S1674-2052(25)00440-X) 
+Domestication-related changes at PvMYB26 reduce pod shattering in common bean and shed light on the origins of agriculture in the Americas
+
 
 ### January
 #### Tuesday January 27
