--- a/reading.Rmd
+++ b/reading.Rmd
@@ -20,8 +20,8 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 Combined R2R3–MYB transcription factor mutants reveal the regulatory structure of the Arabidopsis thaliana flavonoid biosynthesis pathway
 
 #### Tuesday Feburary 10
-[Celebioglu, 2025](https://www.cell.com/molecular-plant/fulltext/S1674-2052(25)00440-X) 
-Domestication-related changes at PvMYB26 reduce pod shattering in common bean and shed light on the origins of agriculture in the Americas
+[San, 2026](https://link.springer.com/content/pdf/10.1186/s12284-026-00884-x_reference.pdf) 
+Independent Origin of Phenol Non-responsivePhenotype Caused By Phr1 Variation DuringDomestication of Asian and African Rice
 
 
 ### January
